fixed content behind nav

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -19,6 +19,13 @@ body {
   color: #244751;
   background-color: #eee;
   font-family: 'Roboto Condensed', sans-serif;
+  position: absolute;
+}
+
+main {
+  width: 450px;
+  align: center;
+  background-color: white;
 }
 
 /*
