--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -5,7 +5,7 @@
   background-color: #00a087;
   color: #e8fdff;
   padding-left: 2em;
-  padding-right: 2em
+  padding-right: 2em;
 }
 
 #nav-bar .logo {
